--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "bible-quiz-webapp",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "animate.css": "^4.1.1",
     "axios": "^1.5.0",
-    "loaders.css": "^0.1.2",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loaders": "^3.0.1",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "sass": "^1.67.0"
   }
 }
