Polishing up on APIs ready for deployment
Co-authored-by: Karlie Moyo <karlieemoyo@gmail.com>

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_USER=bible_quiz_root
 DB_PWD=bible_quiz_root_pwd
 DB_HOST=localhost
 DB_NAME=bible_quiz_db
-DB_ENGINE=sqlite
+DB_ENGINE=mysql
 
 
 # API credentials
